# Spotify_Dashboard_Public

./: .gitignore  README.md  main.py  pyproject.toml
src/: main_ui.py
src/fetch_recommendations/: make_rec.py
src/fetch_song_lyrics/: fetch_lyrics.py
src/fetch_song_lyrics/dummy_lyrics/: jessies_girl.txt  just_what_i_needed.txt  linger.txt  no_surprises.txt
src/fetch_top_tracks/: app.py  backup_top_tracks.csv  spotify_api_call.py  spotify_user_access_backend.ipynb
src/generate_dashboard/: dashboard.py  song_report.html
src/model_embeddings/: song_embeddings.py  spotify_millsongdata_subset.csv
